# tfl_inference_classification

./: AIInference.cc  AIInference.h  AIInferenceBaseConv.cc  AIInferenceBaseConv.h  AIInferenceClassification.cc  AIInferenceClassification.h  CMakeLists.txt  README.md  inference_base_conv.cc  inference_base_conv_and_head.cc  inference_classification.cc  inference_gradcam.cc
python/: base_conv_model.ipynb  inference_classification.py
